--- a/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
+++ b/khyeras/_dev/styles/khyeras_v1/template/overall_footer.html
@@ -9,23 +9,40 @@
 				<div class="wrapper">
 					<div class="flex-row flex-row-20">
 						<div class="flex-column has-discord">
+							<p class="discord-intro"><i class="icon misc-icon misc-discord" aria-hidden="true"></i>Don't like chat widgets or perhaps you're on a mobile device? <a href="//discord.gg/MXtzbmw">Join us on our Discord server</a>. Guests are welcome to chat in select channels.</p>
 							<div id="discord-frame">
 								<iframe src="//titanembeds.com/embed/482924002411806732?css=330" frameborder="0"></iframe>
 							</div>
 						</div>
-						<!-- INCLUDE custom/footer_links.html -->
+						<div class="flex-column">
+							<!-- INCLUDE custom/footer_links.html -->
+							<p>
+								<a class="button-link" href="//rpgrating.com" target="_blank">
+									<!-- <img src="//rpgrating.com/ratings/333.png" alt="Rated 333 from RPGRating.com" title="Rated 333 from RPGRating.com" /> -->
+								</a>
+							</p>
+							<p class="footer-text">
+								&copy; 2018 Khy'eras RPG<br />
+								Content and layout design by Adria/Memoria<br />
+								<!-- EVENT overall_footer_copyright_prepend -->
+								{CREDIT_LINE}
+								<!-- IF TRANSLATION_INFO --><br />{TRANSLATION_INFO}<!-- ENDIF -->
+								<!-- EVENT overall_footer_copyright_append -->
+								<!-- IF DEBUG_OUTPUT --><br />{DEBUG_OUTPUT}<!-- ENDIF -->
+							</p>
+							<p class="footer-text">
+								<!-- EVENT overall_footer_timezone_before -->
+								<i class="icon icon-lg rpg-icon rpg-hourglass" aria-hidden="true"></i> {S_TIMEZONE}
+								<!-- EVENT overall_footer_timezone_after -->
+								<span class="bullet">&bull;</span>
+								<!-- IF not S_IS_BOT -->
+									<a href="{U_DELETE_COOKIES}">
+										<i class="icon icon-lg rpg-icon rpg-burning-embers" aria-hidden="true"></i> {L_DELETE_COOKIES}
+									</a>
+								<!-- ENDIF -->
+							</p>
+						</div>
 					</div>
-					<p class="bottom-line">
-						<!-- EVENT overall_footer_timezone_before -->
-						<i class="icon fa-clock-o fa-fw" aria-hidden="true"></i> {S_TIMEZONE}
-						<!-- EVENT overall_footer_timezone_after -->
-						<span class="bullet">&bull;</span>
-						<!-- IF not S_IS_BOT -->
-							<a href="{U_DELETE_COOKIES}">
-								<i class="icon fa-trash fa-fw" aria-hidden="true"></i> {L_DELETE_COOKIES}
-							</a>
-						<!-- ENDIF -->
-					</p>
 					<!-- INCLUDE navbar_footer.html -->
 				</div>
 			</div>
