--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -337,6 +337,16 @@
 			margin: 0 0 20px 0;
 		}
 	}
+
+	// footer.scss
+	#page-footer .footer-inner {
+		.flex-row .flex-column.has-discord {
+			@include flex(grow);
+		}
+		#discord-frame {
+			height: 525px;
+		}
+	}
 }
 
 /* 850 Breakpoint
@@ -836,7 +846,7 @@
 		}
 	}
 	#viewprofile .stats .stat-bar {
-	    max-width: 75%;
+		max-width: 75%;
 	}
 
 	// other-sections.scss
@@ -1220,6 +1230,19 @@
 	}
 	.featured-content .flex-row .flex-column .image-wrap {
 		padding-bottom: 30%;
+	}
+
+	// footer.scss
+	#page-footer .footer-inner {
+		.flex-row {
+			margin-bottom: -30px;
+			.flex-column {
+				margin-bottom: 30px;
+			}
+		}
+		#discord-frame {
+			height: 450px;
+		}
 	}
 }
 
