Add styles for print.css

--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_variables.scss
@@ -38,6 +38,7 @@ $color-18: #962626; // red
 $color-19: #ad7337; // orange
 $color-20: #ae973f; // yellow
 $color-21: #4d2e56; // purple
+$color-22: #666666; // gray
 
 // Fonts
 // ============================================== //
