--- a/khyeras/styles/khyeras_v1/template/custom/header_menu_02.html
+++ b/khyeras/styles/khyeras_v1/template/custom/header_menu_02.html
@@ -48,7 +48,7 @@
 					</li>
 					<!-- IF U_ACP -->
 						<li>
-							<a href="{U_ACP}" title="{L_ACP}" role="menuitem"><span>Admin CP</span></a>
+							<a href="{{ U_ACP }}" title="{{ lang('ACP') }}" role="menuitem"><span>Admin CP</span></a>
 						</li>
 					<!-- ENDIF -->
 					<!-- IF U_MCP -->
