--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_footer.scss
@@ -22,8 +22,9 @@
 			}
 			.button-wrapper {
 				margin: 0 (-$ffs-half) $ffs-minus (-$ffs-half);
+				@include clearfix('&');
 				.button-link {
-					@include inline-block(middle);
+					float: left;
 					margin: 0 $ffs-half $ffs $ffs-half;
 				}
 			}
