--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_responsive.scss
@@ -1514,11 +1514,7 @@
 	}
 	.banner {
 		.banner-content {
-			padding: 0 20px;
-			.main-title {
-				line-height: 50px;
-				height: 50px;
-			}
+			padding: 14px 20px 6px 20px;
 			.sub-title {
 				display: none;
 			}
