--- a/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
+++ b/khyeras/_dev/styles/khyeras_v1/theme/scss/_layout.scss
@@ -133,7 +133,7 @@
 	.dropdown {
 		@include toggle-content(hide);
 		display: block !important;
-		min-width: 160px;
+		min-width: 185px;
 		@include position($type: absolute, $top: -9999px, $left: -9999px, $z: -1);
 		margin: 0 !important;
 		text-align: left;
@@ -145,6 +145,10 @@
 			overflow-y: auto;
 			&.dropdown-nonscroll {
 				padding: 0;
+			}
+			.button-icon-only {
+				padding: 0;
+				line-height: inherit;
 			}
 		}
  	}
