--- a/khyeras/styles/khyeras_v1/template/custom/header_welcome.html
+++ b/khyeras/styles/khyeras_v1/template/custom/header_welcome.html
@@ -30,7 +30,7 @@
 							</p>
 						<!-- ELSE -->
 							<p>
-								Looks like you're not registered. Check out our boards, <a href="{BOARD_URL}">read more on Khy'eras</a>, or <a href="{U_REGISTER}">sign up today</a>.
+								Looks like you're not registered. Check out our boards, <a href="{BOARD_URL}about">read more on Khy'eras</a>, or <a href="{U_REGISTER}">sign up today</a>.
 							</p>
 						<!-- ENDIF -->
 					</div>
